Bug fixes:
- Click the title in the navbar should reset the location hash and the workspace.
- Typing in a textarea should not trigger global keyboard shortcuts.
- Gadgets were occasionally messed up on safari. Turns out there was a race condition in
  Layout.js that caused it to obtain a value of -1 for cellSize, which made the gadget
  size effectively 0. The new strategy is to set the CSS var from JS, instead of trying
  to read it from CSS into Js.
- Safari should draw edges to the center of the port, not center of gadget.

--- a/public/global.css
+++ b/public/global.css
@@ -1,12 +1,11 @@
 body {
-    --cell-size: 20px;
     --warehouse-width: 14em;
     --toolbox-width: 18em;
-    --nav-height: 60px;
-    --footer-height: var(--cell-size);
+    /* --cell-size and --navbar-height are set from Layout.js */
 
     font-family: 'Share Tech', sans-serif;
     user-select: none;
+    -webkit-user-select: none;
 }
 
 pre {
